--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dice Game</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <h1>Refresh Me!</h1>
+    <div class="player1-dice">
+        <p>Player 1</p>
+        <img class="dice" src="images/dice1.png">
+    </div>
+    <div class="player2-dice">
+        <p>Player 2</p>
+        <img class="dice" src="images/dice1.png">
+    </div>
+</div>
+<footer>
+    www 🎲 dice-game 🎲 com
+</footer>
     
 </body>
 </html>
