--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
         <h1>Refresh Me!</h1>
     <div class="player1-dice">
         <p>Player 1</p>
-        <img class="dice" src="images/dice1.png">
+        <img class="dice" src="images/dice6.png">
     </div>
     <div class="player2-dice">
         <p>Player 2</p>
-        <img class="dice" src="images/dice1.png">
+        <img class="dice" src="images/dice6.png">
     </div>
 </div>
+    
+<script src="index.js"></script>
+</body>
+
 <footer>
     www 🎲 dice-game 🎲 com
 </footer>
-    
-</body>
+
 </html>
